Bug 77525 - Deleting and closing a file while in Split View mode incorrectly switches the other frame
Summary: Deleting and closing a file while in Split View mode incorrectly switches the...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-03-13 21:13 UTC by Jose Hernandez
Modified: 2005-02-19 13:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jose Hernandez 2004-03-13 21:13:36 UTC
Version:           2.2 (using KDE 3.2.90 (CVS >= 20040117), compiled sources)
Compiler:          gcc version 3.2.3 20030422 (Gentoo Linux 1.4 3.2.3-r3, propolice)
OS:          Linux (i686) release 2.4.20-gentoo-r6

I think I got this down after I backtraced what I did in order to submit this:

1) open a couple files... say 5 or so to be safe
2) split view horizontally
3) select different files in each view
4) edit the top so it can't be closed without asking to save
5) select the bottom file as active
6) in the selector widget pane, delete this bottom file from your hd
7) now close this view (you'll get a popup showing that you'll lose the information since it was deleted).. select YES
8) watch as BOTH views switch to different files

The bottom behavhior is ok, but the top view should stay the same, not switch to another file. I tried to narrow down behavior as much as possible and I think this is the correct way to reproduce.. it may be a variance, but the bug does exist.
Comment 1 Anders Lund 2004-09-28 11:28:18 UTC
I can't get it to do like that -- the file just stays open, and the remaining frame displays the file that was in it.

There is another issue though -- we should not offer to reload a deleted file, rather to close|write it. And I we write a file that was deleted on disk, kate tells me that "the file was modified (created) by another program" which is kinda not true...

/me mumbles something about this beeing overly complex
Comment 2 Anders Lund 2005-02-19 13:28:19 UTC
CVS commit by alund: 


* Show modification changes in non-active frames.
* Don't raise an other document when removing a non-current one
* A few checks before using currentView() for safety.

BUG: 77525 


  M +52 -37    kateviewspace.cpp   1.42
  M +5 -0      kateviewspace.h   1.21