* Show modification changes in non-active frames. * Don't raise an other document when removing a non-current one * A few checks before using currentView() for safety.

BUG: 77525